--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-bootsplash": "^4.2.3",
     "react-native-eject": "^0.1.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.3.2",
